--- a/src/SocketIO.Core/SocketIO.Core.csproj
+++ b/src/SocketIO.Core/SocketIO.Core.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../SocketIOClient/SocketIOClient.snk</AssemblyOriginatorKeyFile>
+    <PackageId>TS.SocketIO.Core</PackageId>
+    <Version>3.1.0.2</Version>
   </PropertyGroup>
 
 </Project>
