--- a/src/SocketIOClient/SocketIOClient.csproj
+++ b/src/SocketIOClient/SocketIOClient.csproj
@@ -11,7 +11,8 @@
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageTags>socket.io-client</PackageTags>
 		<RepositoryType>github</RepositoryType>
-		<Version>3.1.0</Version>
+        <PackageId>TS.SocketIOClient</PackageId>
+		<Version>3.1.0.2</Version>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>SocketIOClient.snk</AssemblyOriginatorKeyFile>
